Fix scrollbars

--- a/src/style.css
+++ b/src/style.css
@@ -299,26 +299,29 @@ a:not(:disabled):hover {
     color: var(--a);
 }
 
-/*
 ::-webkit-scrollbar {
     width: 5px;
-
-    opacity: 100%;
-
-    transition: opacity var(--t);
-}
-:not(:hover)::-webkit-scrollbar {
-    opacity: 0%;
+    height: 5px;
 }
 ::-webkit-scrollbar-track {
     background-color: var(--v1-8);
 }
+/* :not(:hover)::-webkit-scrollbar-track {
+    background-color: transparent;
+} */
 ::-webkit-scrollbar-thumb {
-    margin: 2px;
-
+    background-color: var(--v2);
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
     background-color: var(--v3);
 }
-*/
+/* :not(:hover)::-webkit-scrollbar-thumb {
+    background-color: transparent !important;
+} */
+::-webkit-scrollbar-corner {
+    background-color: transparent;
+}
 
 label.filedialog {
     display: flex;
